<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_join_event"
        android:name="com.example.orange.ui.join.JoinEventFragment"
        android:label="Join Event" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.orange.ui.home.HomeFragment"
        android:label="Home" />

    <fragment
        android:id="@+id/navigation_create_event"
        android:name="com.example.orange.ui.create.CreateEventFragment"
        android:label="Create Event" />

    <fragment
        android:id="@+id/navigation_my_events"
        android:name="com.example.orange.ui.events.MyEventsFragment"
        android:label="My Events" />

    <fragment
        android:id="@+id/navigation_view_my_events"
        android:name="com.example.orange.ui.organizer.ViewMyEventsFragment"
        android:label="My Events">
        <action
            android:id="@+id/action_view_my_events_to_view_event_waitlist"
            app:destination="@id/view_event_waitlist" />

        <action
            android:id="@+id/action_view_my_events_to_map_fragment"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.orange.ui.profile.ProfileFragment"
        android:label="title_profile">

        <action
            android:id="@+id/action_navigation_profile_to_facilityProfileFragment"
            app:destination="@id/facilityProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.example.orange.ui.admin.AdminFragment"
        android:label="Admin" />

    <fragment
        android:id="@+id/navigation_admin_view_facilities"
        android:name="com.example.orange.ui.admin.AdminFacilityListFragment"
        android:label="Admin View Facilities" />

    <fragment
        android:id="@+id/navigation_admin_view_events"
        android:name="com.example.orange.ui.admin.AdminEventListFragment"
        android:label="Admin View Events" />

    <fragment
        android:id="@+id/navigation_admin_profiles"
        android:name="com.example.orange.ui.admin.AdminProfilesFragment"
        android:label="Admin View Profiles" />

    <fragment
        android:id="@+id/facilityProfileFragment"
        android:name="com.example.orange.ui.facility.FacilityProfileFragment"
        android:label="Facility Profile" />

    <fragment
        android:id="@+id/view_event_waitlist"
        android:name="com.example.orange.ui.organizer.ViewEventWaitlistFragment"
        android:label="Event Waitlist"
        tools:layout="@layout/fragment_view_event_waitlist" />
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.orange.ui.entrant.CreateQRFragment"
        android:label="Camera" />
    <fragment
        android:id="@+id/navigation_displayqr"
        android:name="com.example.orange.ui.organizer.DisplayQRFragment"
        android:label="DisplayQR" />
    <fragment
        android:id="@+id/navigation_eventDetails"
        android:name="com.example.orange.ui.events.entrantEventDetailsFragment"
        android:label="EventDetails" />

    <fragment
        android:id="@+id/viewMyEventsFragment"
        android:name="com.example.orange.ui.organizer.ViewMyEventsFragment">

    </fragment>

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.orange.ui.organizer.MapsFragment" />

</navigation>